# kloudstrap-rust

./: .gitignore  Cargo.toml  clean.sh  foo.txt  notes  setup.sh
plugins/: meta.json
src/: main.rs  plugin.rs
