[package]
name = "kloudstrap-rust"
version = "0.1.0"
authors = ["fred <fredlahde@gmail.com>"]
edition = "2018"

[dependencies]
zip = "0.5.2"
serde = "1.0.90"
serde_json = "1.0.39"
serde_derive = "1.0.90"
flate2 = "1.0.7"
tar = "0.4.22"
shiplift = "0.4"

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
